--- a/StudentAdminPortalAPI/StudentAdminPortalAPI/appsettings.json
+++ b/StudentAdminPortalAPI/StudentAdminPortalAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StudentAdminPortalDB": "server=MSI\\SQLEXPRESS;database=StudentAdminPortalDb;Trusted_Connection=true"
+  }
 }
